Attempting to fix main menu because red-on-red makes it unreadable very frequently on various common screen sizes...but I don't really like this.

--- a/_sass/components/_main-menu.scss
+++ b/_sass/components/_main-menu.scss
@@ -1,9 +1,10 @@
 @import '../abstracts/functions';
 
 .main-menu {
-    @include respond-to('large') {
-        padding-top: 2rem;
-        text-align: right;
+    background-color: $background-colour;
+
+    @include respond-to('huge') {
+        background: none;
     }
 }
 
@@ -11,24 +12,18 @@
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 0;
+    margin: 0 1rem 0 1rem;
     padding-left: 0;
-
-    @include respond-to('large') {
-        flex-direction: column;
-        align-items: flex-end;
-        margin-right: 2rem;
-        padding: 0;
-    }
 }
 
 .main-menu li {
     font-family: 'Roboto';
     font-size: 1.2rem;
     font-weight: 500;
-    padding: 0.3rem 0;
+    margin: 0.3rem 1rem 0.3rem 1rem;
 
     a {
         color: $secondary-colour;
