--- a/_sass/layout/_grid.scss
+++ b/_sass/layout/_grid.scss
@@ -13,6 +13,7 @@ html {
 
 body {
     height: 100%;
+    min-width: 320px;
 }
 
 .page-grid {
@@ -21,39 +22,21 @@ body {
     grid-template-rows: auto auto 1fr auto;
     grid-gap: 1.5rem;
     min-height: 100vh;
-
-    @include respond-to('large') {
-        grid-template-rows: auto 1fr auto;
-    }
 }
 
 .main-logo {
-    grid-row: 1;
+    grid-row: 2;
     grid-column: col-start 1 / span 12;
-
-    @include respond-to('large') {
-        grid-column: col-start 1 / span 11;
-    }
 }
 
 .main-menu {
     grid-column: col-start 1 / span 12;
-    grid-row: 2;
-
-    @include respond-to('large') {
-        grid-column: col-start 12 / span 1;
-        grid-row: 1 / 3;
-    }
+    grid-row: 1;
 }
 
 .page-content {
     grid-column: col-start 1 / span 12;
     grid-row: 3;
-
-    @include respond-to('large') {
-        grid-column: col-start 1 / span 11;
-        grid-row: 2;
-    }
 }
 
 .page-footer {
@@ -61,7 +44,6 @@ body {
     grid-column: col-start 1 / span 12;
     
     @include respond-to('large') {
-        grid-row: 3;
         display: grid;
         grid-template-columns: 9fr 3fr;
         grid-gap: 20px;
